recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:32: error: not found: value k
	k=0
        ^SquareKoch:33: error: not found: value k
	motif(length,levels,k)
                            ^